[package]
name = "graph-genome-browser-backend"
version = "0.1.0"
authors = ["6br <tfdvrt@gmail.com>"]
readme = "README.md"
description = "MoMI-G backend server"
keywords = ["bioinformatics", "genome browser", "graph genome"]

[dependencies]
iron-send-file = { git = "https://github.com/6br/iron-send-file" }
router = "*"
log = "*"
logger = "*"
env_logger = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_yaml = "*"
bio = "^0.22"
rust-htslib = "^0.23"
docopt = "1"
iron-test = "*"
regex = "*"
iron = "*"
params = "*"
time = "^0.1.44"
staticfile = "*"
mount = "*"
url = "^1.7.2"
libbigwig = { git = "https://github.com/6br/libBigWig" }
flate2 = "*"
multipart = "^0.13.6"
yaml-rust = "*"

[dependencies.rocks]
version = "0.1.10"
default-features = false
features = ["static-link"]
